@@ -150,6 +150,9 @@ this repository contains the full copyright notices and license terms. -->
         <record model="ir.message" id="msg_digits_validation_record">
             <field name="text">The number of digits in the value "%(value)s" for field "%(field)s" in "%(model)s" exceeds the limit of "%(digits)i".</field>
         </record>
+        <record model="ir.message" id="msg_forbidden_char_validation_record">
+            <field name="text">The value "%(value)s" for field "%(field)s" in "%(model)s" contains some invalid chars "%(chars)".</field>
+        </record>
         <record model="ir.message" id="msg_selection_validation_record">
             <field name="text">The value "%(value)s" for field "%(field)s" in "%(model)s" is not one of the allowed options.</field>
         </record>
